# cuda_integ_proj

./: CMakeLists.txt  add_integ.cu  add_standalone.cu  make.bat  prog.cpp  sub_integ.cu
